// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileFieldWrapper renders disabled file input 1`] = `
<fieldset
  className="Field"
>
  <Label>
    Test File Input
     *
     
  </Label>
  <div
    className="InputWrapper"
  >
    <Dropzone
      accept=".csv"
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disablePreview={true}
      disabled={true}
      disabledClassName="DropzoneDisabled"
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
    >
      <span
        className="Placeholder"
      >
        <FileUpload />
        <span>
          Drag a file here, or click to browse
        </span>
      </span>
    </Dropzone>
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders file input 1`] = `
<fieldset
  className="Field"
>
  <Label>
    Test File Input
     *
     
  </Label>
  <div
    className="InputWrapper"
  >
    <Dropzone
      accept=".csv"
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disablePreview={true}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
    >
      <span
        className="Placeholder"
      >
        <FileUpload />
        <span>
          Drag a file here, or click to browse
        </span>
      </span>
    </Dropzone>
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders file input with error message 1`] = `
<fieldset
  className="Field"
>
  <Label>
    Test File Input
     *
     
    <Error
      error="Oh no!"
      wrapper="span"
    />
  </Label>
  <div
    className="InputWrapper"
  >
    <Dropzone
      accept=".csv"
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disablePreview={true}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
    >
      <span
        className="Placeholder"
      >
        <FileUpload />
        <span>
          Drag a file here, or click to browse
        </span>
      </span>
    </Dropzone>
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders file input with help message 1`] = `
<fieldset
  className="Field"
>
  <Label>
    Test File Input
     *
     
  </Label>
  <div
    className="InputWrapper"
  >
    <Dropzone
      accept=".csv"
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disablePreview={true}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
    >
      <span
        className="Placeholder"
      >
        <FileUpload />
        <span>
          Drag a file here, or click to browse
        </span>
      </span>
    </Dropzone>
  </div>
  <div
    className="Help"
  >
    Ask Google!
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders file input with no specified type 1`] = `
<fieldset
  className="Field"
>
  <Label>
    Test File Input
     *
     
  </Label>
  <div
    className="InputWrapper"
  >
    <Dropzone
      accept=""
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disablePreview={true}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
    >
      <span
        className="Placeholder"
      >
        <FileUpload />
        <span>
          Drag a file here, or click to browse
        </span>
      </span>
    </Dropzone>
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders file input with selected filename 1`] = `
<fieldset
  className="Field"
>
  <Label>
    Test File Input
     *
     
  </Label>
  <div
    className="InputWrapper"
  >
    <Dropzone
      accept=".csv"
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disablePreview={true}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
    >
      <span>
        test.csv
      </span>
    </Dropzone>
  </div>
</fieldset>
`;
